[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/art/ui/CardLevel2.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/CardLevel1.png" type="Texture" id=4]
[ext_resource path="res://src/UserInterface/ScrollContainer.gd" type="Script" id=5]
[ext_resource path="res://src/UserInterface/Completed.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UserInterface/Counters/ArchersCounter.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/UserInterface/Counters/ShieldKnightsCounter.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/UserInterface/Counters/KnightsCounter.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/UserInterface/Counters/RedArchersCounter.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/UserInterface/Counters/YellowArchersCounter.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/UserInterface/Counters/CoinsCounterV2.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/UserInterface/Counters/TimeCounter.tscn" type="PackedScene" id=20]
[ext_resource path="res://src/UserInterface/Counters/GenericScriptCounterScript.gd" type="Script" id=21]
[ext_resource path="res://src/UserInterface/Counters/SkeletonsCounter.tscn" type="PackedScene" id=23]

[node name="ScrollContainer" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = false
mouse_filter = 1
scroll_vertical_enabled = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
scroll_duration = 0.3

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 4456.0
margin_bottom = 468.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_top = 29.0
margin_right = 4456.0
margin_bottom = 439.0
mouse_filter = 2
custom_constants/margin_right = 1920
custom_constants/margin_left = 1920

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer"]
margin_left = 1920.0
margin_right = 2536.0
margin_bottom = 410.0
mouse_filter = 2
custom_constants/separation = 100

[node name="CardMenu1" type="TextureRect" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_right = 258.0
margin_bottom = 410.0
texture = ExtResource( 4 )

[node name="Completed" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1" instance=ExtResource( 6 )]
margin_left = 15.0
margin_top = 30.0
margin_right = 245.0
margin_bottom = 75.0
script = ExtResource( 21 )
level_name = "level4"
entity = "completed"

[node name="GridContainer" type="GridContainer" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1"]
margin_left = 289.189
margin_top = 12.2973
margin_right = 419.189
margin_bottom = 388.297
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsCounterV2" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1/GridContainer" instance=ExtResource( 19 )]
margin_left = 0.0
margin_top = 0.0
script = ExtResource( 21 )
level_name = "level1"
entity = "collected_coins"

[node name="TimerCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1/GridContainer" instance=ExtResource( 20 )]
margin_left = 0.0
margin_top = 49.0
margin_bottom = 94.0
level_name = "level1"
entity = "time"

[node name="SkeletonCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1/GridContainer" instance=ExtResource( 23 )]
margin_left = 0.0
margin_top = 98.0
margin_bottom = 143.0
script = ExtResource( 21 )
level_name = "level1"
entity = "skeletons_killed"

[node name="KnightCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1/GridContainer" instance=ExtResource( 16 )]
margin_left = 0.0
margin_top = 147.0
margin_bottom = 192.0
script = ExtResource( 21 )
level_name = "level1"
entity = "knights_killed"

[node name="ShieldKnightCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1/GridContainer" instance=ExtResource( 15 )]
margin_left = 0.0
margin_top = 196.0
margin_bottom = 241.0
script = ExtResource( 21 )
level_name = "level1"
entity = "shield_knights_killed"

[node name="ArcherCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1/GridContainer" instance=ExtResource( 14 )]
margin_left = 0.0
margin_top = 245.0
margin_bottom = 290.0
script = ExtResource( 21 )
level_name = "level1"
entity = "archers_killed"

[node name="YellowArcherCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1/GridContainer" instance=ExtResource( 18 )]
margin_left = 0.0
margin_top = 294.0
margin_bottom = 339.0
script = ExtResource( 21 )
level_name = "level1"
entity = "yellow_archers_killed"

[node name="RedArcherCounter2" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu1/GridContainer" instance=ExtResource( 17 )]
margin_left = 0.0
margin_top = 343.0
margin_bottom = 388.0
level_name = "level1"

[node name="CardMenu2" type="TextureRect" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 358.0
margin_right = 616.0
margin_bottom = 410.0
texture = ExtResource( 1 )

[node name="Completed" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2" instance=ExtResource( 6 )]
margin_left = 15.0
margin_top = 30.0
margin_right = 245.0
margin_bottom = 75.0
script = ExtResource( 21 )
level_name = "level4"
entity = "completed"

[node name="GridContainer" type="GridContainer" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2"]
margin_left = 289.189
margin_top = 12.2973
margin_right = 419.189
margin_bottom = 388.297
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsCounterV2" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2/GridContainer" instance=ExtResource( 19 )]
margin_left = 0.0
margin_top = 0.0
script = ExtResource( 21 )
level_name = "level2"
entity = "collected_coins"

[node name="TimerCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2/GridContainer" instance=ExtResource( 20 )]
margin_left = 0.0
margin_top = 49.0
margin_bottom = 94.0
level_name = "level2"
entity = "time"

[node name="SkeletonCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2/GridContainer" instance=ExtResource( 23 )]
margin_left = 0.0
margin_top = 98.0
margin_bottom = 143.0
script = ExtResource( 21 )
level_name = "level2"
entity = "skeletons_killed"

[node name="KnightCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2/GridContainer" instance=ExtResource( 16 )]
margin_left = 0.0
margin_top = 147.0
margin_bottom = 192.0
script = ExtResource( 21 )
level_name = "level2"
entity = "knights_killed"

[node name="ShieldKnightCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2/GridContainer" instance=ExtResource( 15 )]
margin_left = 0.0
margin_top = 196.0
margin_bottom = 241.0
script = ExtResource( 21 )
level_name = "level2"
entity = "shield_knights_killed"

[node name="ArcherCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2/GridContainer" instance=ExtResource( 14 )]
margin_left = 0.0
margin_top = 245.0
margin_bottom = 290.0
script = ExtResource( 21 )
level_name = "level2"
entity = "archers_killed"

[node name="YellowArcherCounter" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2/GridContainer" instance=ExtResource( 18 )]
margin_left = 0.0
margin_top = 294.0
margin_bottom = 339.0
script = ExtResource( 21 )
level_name = "level2"
entity = "yellow_archers_killed"

[node name="RedArcherCounter2" parent="CenterContainer/MarginContainer/HBoxContainer/CardMenu2/GridContainer" instance=ExtResource( 17 )]
margin_left = 0.0
margin_top = 343.0
margin_bottom = 388.0
level_name = "level2"

[connection signal="gui_input" from="." to="." method="_on_ScrollContainer_gui_input"]
[connection signal="gui_input" from="CenterContainer/MarginContainer/HBoxContainer/CardMenu1" to="." method="_on_CardMenu1_gui_input"]
[connection signal="gui_input" from="CenterContainer/MarginContainer/HBoxContainer/CardMenu2" to="." method="_on_CardMenu2_gui_input"]
